moved things around and added diagnostics

--- a/MyCompilerTests/MyCompilerTests.csproj
+++ b/MyCompilerTests/MyCompilerTests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Compiler\Compiler.csproj" />
       <ProjectReference Include="..\MyCompiler\MyCompiler.csproj" />
     </ItemGroup>
 
