--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <InternalsVisibleTo  Include="MyCompilerTests" />
+        <InternalsVisibleTo  Include="MyCompiler.Tests" />
     </ItemGroup>
 
 </Project>
