Added something to console for manual testing + bugfix

--- a/MyCompiler/MyCompiler.csproj
+++ b/MyCompiler/MyCompiler.csproj
@@ -10,4 +10,8 @@
     <ItemGroup>
         <InternalsVisibleTo  Include="MyCompilerTests" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Compiler\Compiler.csproj" />
+    </ItemGroup>
 </Project>
